[gd_scene load_steps=9 format=2]

[ext_resource path="res://ubuntu-font-family/BitmapFont.tscn" type="PackedScene" id=1]
[ext_resource path="res://Screens/ScreenStageIntro/BossSpriteLoader.tres.gd" type="Script" id=2]
[ext_resource path="res://ParticleEffects/GreyscaleShader.tres" type="Material" id=3]
[ext_resource path="res://ParticleEffects/DrawFromBackBuffer.tres" type="Material" id=4]
[ext_resource path="res://Screens/ScreenCutscene/Portraits/pic_Ouroboros.png" type="Texture" id=5]
[ext_resource path="res://Screens/ScreenOpening/CharActor.gd" type="Script" id=6]
[ext_resource path="res://Stages_Reina/Bosses/Ouroboros/BossOuroboros.tscn" type="PackedScene" id=7]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( -128, 0 )
b = Vector2( 128, 0 )

[node name="CharActor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
text_bg_color = Color( 0.458824, 0, 0.462745, 1 )
bossToLoad = ExtResource( 7 )
large_portrait = ExtResource( 5 )
text = "ouroboros"
facing = 1
auto_OnCommand = true

[node name="BackBufferCopy" type="BackBufferCopy" parent="."]
position = Vector2( 20, 173 )
copy_mode = 2
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Polygon2D4" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -200.0
margin_bottom = -140.0
rect_min_size = Vector2( 1280, 60 )
color = Color( 0.458824, 0, 0.462745, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="FakeZText" parent="Polygon2D4" instance=ExtResource( 1 )]
material = ExtResource( 4 )
position = Vector2( 20, 15 )
text = "ouroboros ouroboros ouroboros ouroboros ouroboros"
wrap_at = 500
scale_by = 4

[node name="Polygon2D5" type="ColorRect" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 140.0
margin_bottom = 200.0
rect_min_size = Vector2( 1280, 60 )
color = Color( 0.458824, 0, 0.462745, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="FakeZText" parent="Polygon2D5" instance=ExtResource( 1 )]
material = ExtResource( 4 )
position = Vector2( 20, 15 )
__meta__ = {
"_edit_group_": true
}
text = "ouroboros ouroboros ouroboros ouroboros ouroboros"
wrap_at = 500
scale_by = 4

[node name="CenterBG" type="ColorRect" parent="."]
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 0.667
margin_top = 0.23999
margin_bottom = -0.240051
rect_min_size = Vector2( 1280, 240 )
rect_pivot_offset = Vector2( 0, 120 )
size_flags_horizontal = 3
color = Color( 0.0196078, 0, 0.635294, 1 )

[node name="BossSpriteLoader" type="Node2D" parent="."]
position = Vector2( 968, 360 )
script = ExtResource( 2 )
overwrite_pos = false
draw_afterimge = true
run_automatically = false

[node name="StaticBody2D" type="StaticBody2D" parent="BossSpriteLoader"]
position = Vector2( 0, 60 )
collision_layer = 18
collision_mask = 18
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossSpriteLoader/StaticBody2D"]
shape = SubResource( 1 )

[node name="Afterimage1" type="Sprite" parent="BossSpriteLoader"]
modulate = Color( 0, 1, 1, 0.733333 )
material = ExtResource( 3 )
z_index = 1

[node name="Afterimage2" type="Sprite" parent="BossSpriteLoader"]
modulate = Color( 0, 1, 1, 0.733333 )
material = ExtResource( 3 )
z_index = 1

[node name="Afterimage3" type="Sprite" parent="BossSpriteLoader"]
modulate = Color( 0, 0.145098, 0.921569, 1 )
material = ExtResource( 3 )

[node name="Afterimage4" type="Sprite" parent="BossSpriteLoader"]
modulate = Color( 0, 0.145098, 0.921569, 1 )

[node name="HDPortrait" type="Sprite" parent="."]
position = Vector2( 290, 512 )
z_index = 1
texture = ExtResource( 5 )
region_rect = Rect2( 310, 0, 400, 1024 )

[node name="HDPortrait_BG" type="Sprite" parent="HDPortrait"]
self_modulate = Color( 0, 0, 0, 0.784314 )
position = Vector2( -40, 0 )
z_index = -1
texture = ExtResource( 5 )
region_rect = Rect2( 310, 0, 400, 1024 )
__meta__ = {
"_edit_group_": true
}

[node name="Polygon2D" type="Polygon2D" parent="."]
visible = false
position = Vector2( 100, 0 )
color = Color( 0.145098, 0.145098, 0.145098, 1 )
polygon = PoolVector2Array( 0, 0, 400, 0, 400, 1024, 0, 1024 )
__meta__ = {
"_edit_group_": true
}
